# realestate-benchmark

./: .gitignore  .integration-checklist.md  CLAUDE.md  EXPERIMENT_GUIDE.md  EXPERIMENT_STATUS.md  EXPERIMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  quick_test.py  run_experiment.sh
data/ames/: README.md
docs/: BEHAVIORAL_OBSERVATIONS.md  DESIGN.md  IMPLEMENTATION.md  INDUSTRY_RESEARCH.md  NEXT_STEPS.md  V5_COMPLETION_SUMMARY.md  V5_IMPLEMENTATION.md  V5_QUICK_START.md  benchmark.html  calibration_gemini_2.5_pro.html  calibration_gemini_2.5_pro.json  harm_taxonomy_report.html  llm_judge_comparison_report.html  model_comparison_report.html
experiments/: README.md  generate_final_report.py  generate_v5_report.py  run_batch.py  run_calibration.py  run_experiment.py  run_full_v5.sh  run_harm_batch.py  run_harm_experiments.py  run_in_tmux.sh  run_llm_judge_comparison.py  run_llm_judge_comparison.sh  run_opus45_batch.py  run_v5_experiments.py  run_v5_parallel.py
experiments/harm_results/haiku35_v2/: report.md  summary.json
experiments/harm_results/opus45_batch/: advice_results.json  coercion_results.json  confidentiality_results.json  discrimination_results.json  misrepresentation_results.json  tool_use_results.json
experiments/harm_results/sonnet45_v2/: report.md  summary.json
experiments/harm_results/v5_parallel_20260625_153758/: config.json  final_report.html  master_report.html
src/realestate_benchmark/: __init__.py
src/realestate_benchmark/agents/: __init__.py  (+5 more)
tests/: __init__.py  test_agents.py  test_buyer_tools.py  test_controller.py  test_evaluation.py  test_harm_metrics.py  test_llm_judge.py  test_memory.py  test_models.py  test_negotiation_dynamics.py  test_personas.py  test_reasoning.py  test_state.py  test_tools.py
(+98 files in other folders)
